--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
+
     <string name="app_name">repo-browser</string>
+
+    <!-- Repository list -->
+    <string name="repository_list_default">Default</string>
+    <string name="repository_list_stars">Stars</string>
+    <string name="repository_list_forks">Forks</string>
+    <string name="repository_list_updated">Updated</string>
+
 </resources>
