--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="repository_list_forks">Forks</string>
     <string name="repository_list_updated">Updated</string>
 
+    <!-- Common -->
+    <string name="error_general">Something went wrong</string>
+    <string name="error_maximum_requests">You had enough requests for this minute</string>
+    <string name="error_incomplete">Something broke and this is all we have</string>
+
 </resources>
