--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,24 @@
     <string name="repository_list_forks">Forks</string>
     <string name="repository_list_updated">Updated</string>
 
+    <!--Repository details-->
+    <string name="repository_details_title">Repository details</string>
+    <string name="repository_details_language">Language</string>
+    <string name="repository_details_created_at">Created at</string>
+    <string name="repository_details_updated_at">Updated at</string>
+    <string name="repository_details_watchers_count">Watchers count</string>
+    <string name="repository_details_forks_count">Forks count</string>
+    <string name="repository_details_issues_count">Open issues count</string>
+    <string name="repository_details_repository_button">Open repo</string>
+
+    <string name="repository_details_owner_about">About owner</string>
+    <string name="repository_details_owner_name">Name</string>
+    <string name="repository_details_owner_company">Company</string>
+    <string name="repository_details_owner_location">Location</string>
+    <string name="repository_details_owner_email">Email</string>
+    <string name="repository_details_owner_bio">Bio</string>
+    <string name="repository_details_owner_button">Open owner</string>
+
     <!-- Common -->
     <string name="error_general">Something went wrong</string>
     <string name="error_maximum_requests">You had enough requests for this minute</string>
